# GGXrdStopResettingINITwiceAYear

./: CMakeLists.txt  ConsoleEmulator.cpp  GGXrdStopResettingINITwiceAYear.cpp  GGXrdStopResettingINITwiceAYear.rc  GGXrdStopResettingINITwiceAYear.sln  GGXrdStopResettingINITwiceAYear.vcxproj  GGXrdStopResettingINITwiceAYear.vcxproj.filters  GGXrdStopResettingINITwiceAYearCommon.cpp  LICENSE  PatcherVersion.h  README.md  Resource.h  pch.h  prebuild.ps1
